--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,12 @@
             <version>5.6.15.Final</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>javax.mail</artifactId>
+            <version>1.6.2</version> <!-- Use the latest version available -->
+        </dependency>
+
     </dependencies>
 
     <build>
