mail send option set

--- a/src/main/resources/email.properties
+++ b/src/main/resources/email.properties
@@ -1,3 +1,9 @@
-email.username=abc.@gmail.com
-email.password=abcdTmadhu@123eeghaahs
+
+mail.smtp.host=smtp.gmail.com
+mail.smtp.port=587
+mail.smtp.starttls.enable=true
+mail.smtp.ssl.trust=smtp.gmail.com
+email.username=tashen.hktm@gmail.com
+email.password=
+mail.smtp.auth=true
 
