Otp send option set

--- a/src/main/resources/email.properties
+++ b/src/main/resources/email.properties
@@ -4,6 +4,6 @@ mail.smtp.port=587
 mail.smtp.starttls.enable=true
 mail.smtp.ssl.trust=smtp.gmail.com
 email.username=tashen.hktm@gmail.com
-email.password=
+email.password=fykj gkte bosa ueos
 mail.smtp.auth=true
 
