password encrypt method complete

--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,12 @@
             <version>1.6.2</version> <!-- Use the latest version available -->
         </dependency>
 
+        <dependency>
+            <groupId>org.mindrot</groupId>
+            <artifactId>jbcrypt</artifactId>
+            <version>0.4</version>
+        </dependency>
+
     </dependencies>
 
     <build>
